--- a/euler-hs.cabal
+++ b/euler-hs.cabal
@@ -19,6 +19,7 @@ executable euler-hs
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
+  ghc-options:         -O2
   build-depends:       base >=4.6 && <4.7,
                        ansi-terminal,
                        array,
