--- a/euler-hs.cabal
+++ b/euler-hs.cabal
@@ -25,6 +25,8 @@ executable euler-hs
                        ansi-terminal,
                        array,
                        bifunctors,
-                       pqueue
+                       pqueue,
+                       numerals,
+                       text
   -- hs-source-dirs:
   default-language:    Haskell2010
