--- a/euler-hs.cabal
+++ b/euler-hs.cabal
@@ -27,6 +27,7 @@ executable euler-hs
                        bifunctors,
                        pqueue,
                        numerals,
-                       text
+                       text,
+                       digits
   -- hs-source-dirs:
   default-language:    Haskell2010
